# thefuck-upgrade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  README_CN.md  README_EN.md  README_ROOT.md  UPGRADE_SUMMARY.md  install-local.ps1  install.ps1  install.sh  pyproject.toml  quick-test.ps1  ruff.toml  setup.ps1  shell.sh  verify.ps1  verify.sh
.github/workflows/: ci.yml
thefuck/: Cargo.toml  build.rs
thefuck/src/: argument_parser.rs  conf.rs  corrector.rs  entrypoints.rs  exit_codes.rs  firstuse.rs  history.rs  io.rs  lib.rs  main.rs  output_readers.rs  shells.rs  system.rs  types.rs  util.rs
thefuck/src/entrypoints/: alias.rs  delete.rs  firstuse.rs  fix_command.rs  update.rs
thefuck/src/rules/: apt.rs  aws.rs  az.rs  brew.rs  bun.rs  cargo.rs  cd.rs  choco.rs  common.rs  conda.rs  dnf.rs  docker.rs  git.rs  go.rs  gradle.rs  grep.rs  helpers.rs  kubectl.rs  maven.rs  missing_space.rs  mod.rs  npm.rs  pacman.rs  pip.rs  pnpm.rs  python.rs  sudo.rs  systemctl.rs  terraform.rs  uv.rs  winget.rs  yarn.rs
thefuck/tests/: main.rs
