[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thefuck"
version = "3.33.0"
description = "Magnificent app which corrects your previous console command"
readme = "README.md"
authors = [
    {name = "Nikita Sivakov", email = "nsk@me.com"},
]
keywords = ["fuck", "console", "shell", "command", "fix"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
thefuck = "thefuck.cli:main"
thefuck_firstuse = "thefuck.firstuse:main"

[tool.setuptools.packages.find]
exclude = ["tests*", "build*"]

[tool.setuptools.package-data]
thefuck = ["rules/*.py"]