[package]
name = "thefuck"
version = "3.33.0"
edition = "2021"
authors = ["Nikita Sivakov <nsk@me.com>"]
description = "Magnificent app which corrects your previous console command"
repository = "https://github.com/HyShmily/thefuck-upgrade"
readme = "../README.md"
license = "MIT"
keywords = ["fuck", "console", "shell", "command", "fix"]
categories = ["command-line-utilities"]
build = "build.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
crossterm = "0.27"
clap = { version = "4.5", features = ["derive"] }
config = "0.14"
dialoguer = "0.11"
dirs = "5.0"
itertools = "0.12"
once_cell = "1.19"
path-clean = "1.0"
pest = "2.7"
pest_derive = "2.7"
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
similar = "2.4"
shell-words = "1.1"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
unicode-segmentation = "1.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon", "winuser"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"
insta = "1.39"

[profile.release]
lto = true
panic = "abort"
strip = true

[[bin]]
name = "thefuck"
path = "src/main.rs"

[[bin]]
name = "thefuck_firstuse"
path = "src/firstuse.rs"

[build-dependencies]
anyhow = "1.0"
