[package]
name = "thefuck"
version = "3.33.0"
edition = "2021"
authors = ["Nikita Sivakov <nsk@me.com>"]
description = "Magnificent app which corrects your previous console command"
repository = "https://github.com/HyShmily/thefuck-upgrade"
readme = "../README.md"
license = "MIT"
keywords = ["fuck", "console", "shell", "command", "fix"]
categories = ["command-line-utilities"]
[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
shell-words = "1.1"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "thefuck"
path = "src/main.rs"

[[bin]]
name = "thefuck_firstuse"
path = "src/firstuse.rs"
